[package]
name = "spartan-zkinterface"
version = "0.1.1"
authors = ["Varun Gandhi <vgandhi@g.harvard.edu>"]
edition = "2021"

[lib]
name = "spzk"
path = "src/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[bin]]
name = "spzk"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
spartan = { git = "https://github.com/vargandhi/Spartan.git", branch = "multicore"}
rand = "0.7.3"
merlin = "3.0.0"
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false }
generic-array = "0.14.4"
flatbuffers = "0.7.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.59"
packed_simd = "0.3.9"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py37"]
